remove canonical tag, replace auther name, remove some kewords

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <meta class="metaTagTop" name="description"
     content="GlucoTru is an all-natural supplement designed to support healthy blood sugar levels, glucose metabolism, and healthy weight management. ">
   <meta class="metaTagTop" name="keywords"
-    content="GlucoTru, GlucoTru Supplement, GlucoTru Order, GlucoTru Buy, GlucoTru Official">
-  <meta class="metaTagTop" name="author" content="Your Name">
+    content="GlucoTru, GlucoTru Supplement, Buy GlucoTru, GlucoTru Buy, GlucoTru Official">
+  <meta class="metaTagTop" name="author" content="Gamini Gaba">
   <meta class="metaTagTop" property="og:image"
     content="https://us-glucotruu.com/hosted/images/1e/2d2bff40b841d7ad49788aa3443967/glucotru-order-buy.png"
     id="social-image">
@@ -30,7 +30,7 @@
   <meta property="og:url" content="https://us-glucotruu.com/glucotruu">
   <meta property="og:type" content="website">
   <link rel="stylesheet" media="screen" href="assets/lander.css">
-  <link rel="canonical" href="glucotruu.html">
+
   <link rel="stylesheet" href="../use.fontawesome.com/releases/v5.9.0/css/all.css">
   <link rel="stylesheet" href="../use.fontawesome.com/releases/v5.9.0/css/v4-shims.css">
   <link
