--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   class="clickfunnels-com bgCover wf-proximanova-i4-active wf-proximanova-i7-active wf-proximanova-n4-active wf-proximanova-n7-active wf-active wf-proximanova-i3-active wf-proximanova-n3-active wf-proximanovasoft-n4-active wf-proximanovasoft-n7-active wf-proximasoft-n4-active wf-proximasoft-i4-active wf-proximasoft-i6-active wf-proximasoft-n6-active wf-proximasoft-i7-active wf-proximasoft-n7-active "
   style="overflow: initial; background-color: rgb(255, 255, 255);">
 
-<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by Ke100 maitry -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by M. ke100 -->
 
 <head data-next-url data-this-url="glucotruu.html">
   <meta charset="UTF-8">
@@ -4217,7 +4217,4 @@
     data-cf-beacon='{"rayId":"7fba7c2fca3b3fe8","version":"2023.8.0","b":1,"token":"405b708a9b0242e88fda34dc27903686","si":100}'
     crossorigin="anonymous"></script>
 </body>
-
-<!-- Mirrored from us-glucotruu.com/glucotruu by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 24 Aug 2023 09:14:50 GMT -->
-
 </html>
