--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by M. ke100 -->
 
-<head data-next-url data-this-url="glucotruu.html">
+<head>
   <meta charset="UTF-8">
   <script
     type="text/javascript">window.NREUM || (NREUM = {}); NREUM.info = { "beacon": "bam.nr-data.net", "errorBeacon": "bam.nr-data.net", "licenseKey": "NRJS-14b9fc0143e6570151a", "applicationID": "545462463", "transactionName": "IgpZQUBdWF8DFEsXEQQXR1RVV0ccFgcDBxFOFUJXXltHWwMC", "queueTime": 0, "applicationTime": 360, "agent": "" }</script>
@@ -27,7 +27,7 @@
   <meta property="og:title" content="GlucoTru™ | USA Official | 100% Natural And Pure">
   <meta property="og:description"
     content="GlucoTru is an all-natural supplement designed to support healthy blood sugar levels, glucose metabolism, and healthy weight management. ">
-  <meta property="og:url" content="https://us-glucotruu.com/glucotruu">
+  <meta property="og:url" content="https://us-glucotruu.com">
   <meta property="og:type" content="website">
   <link rel="stylesheet" media="screen" href="assets/lander.css">
 
@@ -258,27 +258,21 @@
                 id="tmp_image-31626" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false"
                 data-trigger="none" data-animate="fade" data-delay="500"
                 style="margin-top: 15px; outline: none; cursor: pointer;" aria-disabled="false" data-hide-on>
-                <img src="hosted/glucotru.png" class="elIMG ximg" alt="glucotru"
-                  width="400"
-                  tabindex="0" height>
+                <img src="hosted/glucotru.png" class="elIMG ximg" alt="glucotru" width="400" tabindex="0" height>
               </div>
               <div class="de elImageWrapper de-image-block elAlign_center elMargin0 ui-droppable de-editable"
                 id="tmp_image-16382" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false"
                 data-trigger="none" data-animate="fade" data-delay="500"
                 style="margin-top: 0px; outline: none; cursor: pointer;" aria-disabled="false" data-hide-on="desktop">
                 <img src="hosted/images/52/acde32012a4c39bec53dca19bccf2e/glucotru-made-in-usa.png" class="elIMG ximg"
-                  alt="glucotru made in usa"
-                
-                  tabindex="0">
+                  alt="glucotru made in usa" tabindex="0">
               </div>
               <div class="de elImageWrapper de-image-block elAlign_center elMargin0 ui-droppable de-editable"
                 id="tmp_image-22001" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false"
                 data-trigger="none" data-animate="fade" data-delay="500"
                 style="margin-top: 0px; outline: none; cursor: pointer;" aria-disabled="false" data-hide-on="desktop">
                 <img src="hosted/images/c0/954b61099740948ffdd8f6104e3e62/glucotru-05-star-rated.png" class="elIMG ximg"
-                  alt="glucotru 05 star rated" width="300"
-                  
-                  tabindex="0">
+                  alt="glucotru 05 star rated" width="300" tabindex="0">
               </div>
               <div class="de elHeadlineWrapper ui-droppable de-editable" id="tmp_subheadline-97413"
                 data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true"
@@ -2811,7 +2805,7 @@
                 style="margin-top: 0px; outline: none; cursor: pointer;" aria-disabled="false" data-hide-on>
                 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0"
                   style="text-align: left; font-size: 18px; color: rgb(255, 255, 255);" data-bold="inherit"
-                  data-gramm="false" contenteditable="false">Copyright © 2023 - GlucoTru</h2>
+                  data-gramm="false" contenteditable="false">Copyright © 2025 - GlucoTru</h2>
               </div>
             </div>
           </div>
@@ -4217,4 +4211,5 @@
     data-cf-beacon='{"rayId":"7fba7c2fca3b3fe8","version":"2023.8.0","b":1,"token":"405b708a9b0242e88fda34dc27903686","si":100}'
     crossorigin="anonymous"></script>
 </body>
+
 </html>
