--- a/index.html
+++ b/index.html
@@ -423,8 +423,7 @@
                 style="margin-top: 0px; outline: none; cursor: pointer;" aria-disabled="false">
                 <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" class="elIMG ximg"
                   alt="glucotru made in the usa"
-                  data-src="//hosted/images/a2/0b7ceafe6d47fd8989f0f1af112fd9/glucotru-made-in-the-usa.png"
-                  tabindex="0">
+                  data-src="hosted/images/a2/0b7ceafe6d47fd8989f0f1af112fd9/glucotru-made-in-the-usa.png" tabindex="0">
               </div>
               <div class="de elHeadlineWrapper ui-droppable de-editable" id="tmp_subheadline-33754"
                 data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true"
