--- a/index.html
+++ b/index.html
@@ -454,8 +454,7 @@
                 style="margin-top: 0px; outline: none; cursor: pointer;" aria-disabled="false">
                 <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" class="elIMG ximg"
                   alt="glucotru all natural"
-                  data-src="//us-glucotruu.com/hosted/images/fa/7fcc34c05745b4b97086098169ed25/glucotru-all-natural.png"
-                  tabindex="0">
+                  data-src="hosted/images/fa/7fcc34c05745b4b97086098169ed25/glucotru-all-natural.png" tabindex="0">
               </div>
               <div class="de elHeadlineWrapper ui-droppable de-editable" id="headline-54520" data-de-type="headline"
                 data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade"
@@ -489,8 +488,7 @@
                 style="margin-top: 0px; outline: none; cursor: pointer;" aria-disabled="false">
                 <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" class="elIMG ximg"
                   alt="glucotru fda approved"
-                  data-src="//us-glucotruu.com/hosted/images/68/4bb7ee0c4f47f0b22e88d2202c864b/glucotru-fda-approved.png"
-                  tabindex="0">
+                  data-src="hosted/images/68/4bb7ee0c4f47f0b22e88d2202c864b/glucotru-fda-approved.png" tabindex="0">
               </div>
               <div class="de elHeadlineWrapper ui-droppable de-editable" id="headline-39567" data-de-type="headline"
                 data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade"
@@ -524,8 +522,7 @@
                 style="margin-top: 0px; outline: none; cursor: pointer;" aria-disabled="false">
                 <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" class="elIMG ximg"
                   alt="glucotru gmp certified" width="150"
-                  data-src="//us-glucotruu.com/hosted/images/2d/c18f2a82604326bed9218bb61c347d/glucotru-gmp-certified.png"
-                  tabindex="0">
+                  data-src="hosted/images/2d/c18f2a82604326bed9218bb61c347d/glucotru-gmp-certified.png" tabindex="0">
               </div>
               <div class="de elHeadlineWrapper ui-droppable de-editable" id="headline-68176" data-de-type="headline"
                 data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade"
