--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <link rel="icon" type="image/png" href="hosted/images/62/c3dca6ab7d454abb1c6c3032eb07cf/glucotru.png">
   </link>
   <meta name="msvalidate.01" content="D706A9CDA41743E14DA57A6DCB2DDAFF" />
-  <meta name="google-site-verification" content="Xj4BNQPYmAIP4806FTYLSazyTBgQ9bgKwEA0Aiy0m5Q" />
+  <meta name="google-site-verification" content="jZ-4xgvm4jkQtqSJ2rjz3NtQHXHVf1xCU-st2WTnuJI" />
 </head>
 <script
   type="text/javascript">function init() { for (var t = document.getElementsByTagName("img"), e = 0; e < t.length; e++) { var i = t[e].getAttribute("data-src"); if (i) { for (var n = t[e].parentElement, a = 0; 0 == a && n;)a = n.scrollWidth, n = n.parentElement; a && 0 < i.indexOf("images.clickfunnels.com") && (i = "hosted/images/cdn-cgi/image/fit=scale-down,width=" + a + ",quality=75/" + i), t[e].setAttribute("src", i) } } } window.addEventListener("load", init);</script>
@@ -2792,11 +2792,10 @@
                 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0"
                   style="text-align: right; font-size: 18px; color: rgb(255, 255, 255);" data-bold="inherit"
                   data-gramm="false" contenteditable="false">
-                  <a href="privacy-policy1683653171397.html" id="link-10282" class target="_parent"
-                    rel="noopener noreferrer" style="color: rgb(220, 255, 251);">Privacy Policy</a> | <a
-                    href="disclaimer1683653171805.html" id="link-64399" class target="_parent" rel="noopener noreferrer"
-                    style="color: rgb(220, 255, 251);">Disclaimer</a> | <a href="terms-and-conditions1683653172092.html"
-                    id="link-51747" class target="_parent" rel="noopener noreferrer"
+                  <a href="privacy-policy.html" id="link-10282" class target="_parent" rel="noopener noreferrer"
+                    style="color: rgb(220, 255, 251);">Privacy Policy</a> | <a href="disclaimer.html" id="link-64399"
+                    class target="_parent" rel="noopener noreferrer" style="color: rgb(220, 255, 251);">Disclaimer</a> |
+                  <a href="terms-and-conditions.html" id="link-51747" class target="_parent" rel="noopener noreferrer"
                     style="color: rgb(220, 255, 251);">Terms</a>
                 </h2>
               </div>
