--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 id="tmp_image-31626" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false"
                 data-trigger="none" data-animate="fade" data-delay="500"
                 style="margin-top: 15px; outline: none; cursor: pointer;" aria-disabled="false" data-hide-on>
-                <img src="hosted/glucotru.png" class="elIMG ximg" alt="glucotru" width="400" tabindex="0" height>
+                <img src="hosted/glucotru.webp" class="elIMG ximg" alt="glucotru" width="400" tabindex="0" height>
               </div>
               <div class="de elImageWrapper de-image-block elAlign_center elMargin0 ui-droppable de-editable"
                 id="tmp_image-16382" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false"
