--- a/index.html
+++ b/index.html
@@ -23,13 +23,8 @@
     content="GlucoTru is an all-natural supplement designed to support healthy blood sugar levels, glucose metabolism, and healthy weight management. ">
   <meta property="og:url" content="https://us-glucotruu.com">
   <meta property="og:type" content="website">
-  <link rel="stylesheet" media="screen" href="assets/lander.css">
-
-  <link rel="stylesheet" href="../use.fontawesome.com/releases/v5.9.0/css/all.css">
-  <link rel="stylesheet" href="../use.fontawesome.com/releases/v5.9.0/css/v4-shims.css">
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:400,700%7COswald:400,700%7CDroid+Sans:400,700%7CRoboto:400,700%7CLato:400,700%7CPT+Sans:400,700%7CSource+Sans+Pro:400,600,700%7CNoto+Sans:400,700%7CPT+Sans:400,700%7CUbuntu:400,700%7CBitter:400,700%7CPT+Serif:400,700%7CRokkitt:400,700%7CDroid+Serif:400,700%7CRaleway:400,700%7CInconsolata:400,700"
-    rel="stylesheet" type="text/css">
+  <link rel="stylesheet" media="screen" href="assets/unused.css">
+  <link rel="preload" href="assets/unused.css" as="style" />
   <style>
     [data-timed-style='fade'] {
       display: none
@@ -2803,9 +2798,6 @@
     <div class="dropZoneForSections ui-droppable" style="display: none;">
       <div class="dropIconr"><i class="fa fa-plus"></i></div>
     </div>
-    <link rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=sans-serif%7CFjalla+One%7Csans-serif%7COswald%7CRoboto+Slab%7Csans-serif%7COswald%7Csans-serif%7COxygen%7Csans-serif%7CRoboto+Slab%7Csans-serif%7CRoboto+Slab%7Csans-serif%7CRoboto+Slab%7Csans-serif%7CFjalla+One%7Csans-serif%7CRoboto+Slab%7CFjalla+One%7Csans-serif%7CFjalla+One%7Csans-serif%7CRoboto+Slab%7Csans-serif%7C%7C"
-      id="custom_google_font">
     <style id="bold_style_tmp_subheadline-33754">
       #tmp_subheadline-33754 .elHeadline b {
         color: rgb(255, 227, 0);
