--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
   style="overflow: initial; background-color: rgb(255, 255, 255);">
 
 <head>
-  <meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by M. ke100 -->
-  <meta charset="UTF-8">
-  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-  <meta content="utf-8" http-equiv="encoding">
-  <meta name="viewport" content="initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>GlucoTru™ | USA Official | 100% Natural And Pure</title>
   <meta class="metaTagTop" name="description"
     content="GlucoTru is an all-natural supplement designed to support healthy blood sugar levels, glucose metabolism, and healthy weight management. ">
@@ -23,7 +21,7 @@
   <meta property="og:url" content="https://us-glucotruu.com">
   <meta property="og:type" content="website">
   <link rel="stylesheet" media="screen" href="assets/unused.css">
-  <link rel="preload" href="assets/unused.css" as="style" />
+  <link rel="preload" href="assets/unused.css" as="style">
   <style>
     [data-timed-style='fade'] {
       display: none
@@ -33,12 +31,12 @@
       display: none
     }
   </style>
-  <link rel="alternate" href="https://glucotru.vercel.app/" hreflang="en-us" />
-  <link rel="alternate" href="https://glucotru.vercel.app/" hreflang="x-default" />
-  <link rel="canonical" href="https://glucotru.vercel.app/" />
+  <link rel="alternate" href="https://glucotru.vercel.app/" hreflang="en-us">
+  <link rel="alternate" href="https://glucotru.vercel.app/" hreflang="x-default">
+  <link rel="canonical" href="https://glucotru.vercel.app/">
   <meta name="robots" content="index, follow">
-  <meta name="msvalidate.01" content="D706A9CDA41743E14DA57A6DCB2DDAFF" />
-  <meta name="google-site-verification" content="jZ-4xgvm4jkQtqSJ2rjz3NtQHXHVf1xCU-st2WTnuJI" />
+  <meta name="msvalidate.01" content="D706A9CDA41743E14DA57A6DCB2DDAFF">
+  <meta name="google-site-verification" content="jZ-4xgvm4jkQtqSJ2rjz3NtQHXHVf1xCU-st2WTnuJI">
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/icons/favicon-192x192.png">
